--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+input{
+  width: 50%;
+  min-width:250px;
+  height: 40px;
+  font-weight: 900;
+
+}
+.App{
+  width: 100%;
+  padding: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#loading_div ,#Error{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+}
+
+#Loader {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  border: 10px solid transparent;
+  border-top-color: black;
+  animation: loader 2s ease-in-out infinite ;
+}
+
+#Error > p{
+  color: red;
+}
+#postoffice-conatiner{
+  display: flex;
+  margin-block: 30px;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+#postOfficeCard{
+  padding: 10px;
+  border: 3px solid black;
+  border-radius: 10px;
+  width: 25%;
+  min-width: 200px;
+  text-align: start;
+}
+#head-box{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 50px;
+
+}
+#head-box>p> button{
+  padding: 16px 24px;
+  background-color: black;
   color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+
 }
 
-.App-link {
-  color: #61dafb;
+#head-box>p>button:hover{
+  background-color: gray;
+    color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
+
+@keyframes loader {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+
+
+  100% {
     transform: rotate(360deg);
   }
 }
